--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -1,6 +1,45 @@
 .weapons {
-    height: 400px;
-    width: 230px;
-    border: 2px solid #eee;
-    border-radius: 4px;
+    margin-top: -16%;
+    margin-left: 50%;
+    height: 280px;
+    width: 228px;
+    border: 4px solid rgb(1, 65, 65);
+    border-radius: 10px;
+}
+
+.weapons p {
+    font-size: 23px;
+    text-align: center;
+    margin-top: 3%;
+    color: teal;
+}
+
+.btn {
+    height: 40px;
+    width: 115px;
+    margin-top: 11%;
+    margin-left: 24%;
+    border: none;
+    outline: none;
+    background: #34495e;
+    border-radius: 5px;
+    font-size: 20px;
+    color: #fff;
+    &:hover {
+        cursor: pointer;
+        transition: 1s ease-in;
+        background: #e2240f;
+    }
+}
+
+.details {
+    margin-left: 30%;
+}
+
+.details button {
+    margin-top: 10%;
+    height: 50px;
+    width: 180px;
+    font-size: 28px;
+    font-weight: bolder;
 }
