--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
 
 * {
     margin: 0;
@@ -17,7 +17,8 @@ h1 {
 }
 
 body {
-    background:  ghostwhite;
+    background: ghostwhite;
+    min-height: 100vh;
 }
 
 .game__play {
@@ -44,4 +45,17 @@ body {
     text-align: center;
     color: #34495e;
     font-size: 21px;
+}
+
+.footer {
+    margin-top: 5%;
+}
+
+.link__text__white {
+    color: #34495e;
+}
+
+.footer__text {
+    text-align: center;
+    font-size: 20px;
 }
