--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -27,7 +27,7 @@
     color: #fff;
     &:hover {
         cursor: pointer;
-        transition: 1s ease-in;
+        transition: background 2s ease-in;
         background: #dba45b;
     }
 }
