refactor game speed

--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -28,7 +28,7 @@
     &:hover {
         cursor: pointer;
         transition: background 2s ease-in;
-        background: #dba45b;
+        // background: #dba45b;
     }
 }
 
